--- a/webpage.html
+++ b/webpage.html
@@ -165,19 +165,24 @@
   <h2>Latest from Our Blog</h2>
   <div class="blog-posts">
     <div class="card">
-      <h3>5 Ways to Optimize Urban Forestry</h3>
-      <p>Discover how AI and data-driven insights can transform urban forestry management.</p>
-      <a href="blog/urban-forestry.html">Read More</a>
+        <h3>Smart Ways to Optimize Urban Forestry</h3>
+        <p>Discover how AI and data-driven insights can transform urban forestry management.</p>
+      <a href="https://musthafa25.github.io/blogs_webpage//blog_urbanforestry.html">Read More</a>
     </div>
-    <div class="card">
+    <!-- <div class="card">
       <h3>How to Save Water with Smart Irrigation</h3>
       <p>Learn how precision irrigation can reduce water waste and improve plant health.</p>
       <a href="blog/smart-irrigation.html">Read More</a>
-    </div>
+    </div> -->
     <div class="card">
       <h3>Carbon Mapping: A Step Towards Sustainability</h3>
       <p>Understand the importance of tree-level carbon mapping for ecological balance.</p>
-      <a href="https://medium.com/@sandysk.map/revolutionary-forest-carbon-mapping-48a6b8fb0e68">Read More</a>
+      <a href="https://musthafa25.github.io/blogs_webpage/forest_carbon_blog.html">Read More</a>
+    </div>
+    <div class="card">
+      <h3>How Satellite Data Analytics Helps Save Lives</h3>
+      <p>Explore the role of satellite data in disaster response and management.</p>
+      <a href="https://musthafa25.github.io/kerala-floods/kerala_floods_blog.html">Read More</a>
     </div>
   </div>
 </section>
